--- a/app/src/main/res/layout/activity_experiencia_diseno_inge.xml
+++ b/app/src/main/res/layout/activity_experiencia_diseno_inge.xml
@@ -118,7 +118,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/organismo"
@@ -194,7 +193,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periodo"
@@ -270,7 +268,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelExp"
@@ -370,7 +367,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/organismo2"
@@ -449,7 +445,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periodo2"
@@ -528,7 +523,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelExp2"
@@ -642,7 +636,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/organismo3"
@@ -721,7 +714,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periodo3"
@@ -798,7 +790,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelExp3_vista"
@@ -913,7 +904,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/organismo4"
@@ -992,7 +982,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periodo4"
@@ -1069,7 +1058,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelExp4_vista"
@@ -1124,6 +1112,7 @@
                     android:gravity="center"
                     android:textColor="@color/blanco"
                     android:text="Actualizar seccion"
+                    android:id="@+id/actua_diseInge"
                     />
 
             </LinearLayout>
