--- a/app/src/main/res/layout/activity_participacion_col_cam.xml
+++ b/app/src/main/res/layout/activity_participacion_col_cam.xml
@@ -116,7 +116,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/orgColeCam"
@@ -192,7 +191,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periColeCam"
@@ -268,7 +266,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelPart"
@@ -368,7 +365,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/orgColeCam2"
@@ -447,7 +443,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periColeCam2"
@@ -526,7 +521,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelPart2"
@@ -643,7 +637,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/orgColeCam3"
@@ -721,7 +714,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periColeCam3"
@@ -798,7 +790,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelPart3_vista"
@@ -911,7 +902,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/orgColeCam4"
@@ -989,7 +979,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/periColeCam4"
@@ -1066,7 +1055,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/nivelPart4_vista"
@@ -1120,6 +1108,7 @@
                     android:gravity="center"
                     android:textColor="@color/blanco"
                     android:text="Actualizar seccion"
+                    android:id="@+id/actuaParColCam"
                     />
 
             </LinearLayout>
