--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -93,7 +93,7 @@
                 android:hint="Fecha de nacimiento"
                 android:textColorHint="@color/blanco"
                 android:textColor="@color/blanco"
-                android:inputType="date"
+                android:inputType="text"
                 />
             <TextView
                 android:hint="Los apellidos solo puede contener letras."
