--- a/app/src/main/res/layout/activity_logros_profesionales.xml
+++ b/app/src/main/res/layout/activity_logros_profesionales.xml
@@ -37,10 +37,10 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="34dp"
                     android:gravity="center"
                     android:textColor="@color/blanco"
-                    android:textSize="25dp"
+                    android:textSize="16dp"
                     android:text="Logros profesionales no academicos"
 
                     />
@@ -120,7 +120,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/desLogAca"
@@ -197,7 +196,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/desLogAca2"
@@ -274,7 +272,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/desLogAca3"
@@ -350,7 +347,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/desLogAca4"
@@ -425,7 +421,6 @@
                     android:layout_height="35dp"
                     android:layout_gravity="center"
                     android:gravity="bottom"
-                    android:text="nombre de usuario"
                     android:textColorHint="@color/negro"
                     android:textSize="21dp"
                     android:id="@+id/desLogAca5"
@@ -457,6 +452,7 @@
                     android:gravity="center"
                     android:textColor="@color/blanco"
                     android:text="Actualizar seccion"
+                    android:id="@+id/actuaLogrosProfe"
                     />
             </LinearLayout>
         </LinearLayout>
